--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,15 +1,4 @@
 
-// first section
-.main-img{
-  background-image: url('../../../assets/images/hero_bg.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 620px;
-
-}
-
 // end first section
 
       .bd-1 , .bd-2 ,.bd-3{
@@ -30,4 +19,24 @@ width: 100%;
 }
 .let-text-left{
   text-align: left!important;
+}
+
+
+.custom-rounded{
+  width: 35px;
+  height: 35px;
+}
+/* start styles for tables  */
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border-bottom: 1px solid #d1d1d1;
+  text-align: center;
+  font-size: 13px;
+  padding: 5px;
+
 }
