--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -3,8 +3,9 @@
     <div class="row justify-content-center text-center">
       <div class="col-lg-12">
         <h1>
-         Home
+         page not found
         </h1>
+        <button [routerLink]="'home'"> home </button>
       </div>
     </div>
   </div>
