--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -16,8 +16,8 @@
     </thead>
     <tbody>
       <!-- ; [ngbTooltip]="user.name" -->
-      <tr *ngFor="let sudent of ourData; index as i">
-        <th scope="row">{{ i + 1 }}</th>
+      <tr *ngFor="let sudent of ourData">
+        <th scope="row">{{ sudent.id }}</th>
         <td>{{ sudent?.first_name }}</td>
         <td>{{ sudent?.last_name }}</td>
 
@@ -27,43 +27,13 @@
     </tbody>
   </table>
   <div class="d-flex justify-content-center mb-5">
-    <ngb-pagination
-      [collectionSize]="totallengthForData"
-      [(page)]="page"
-      [boundaryLinks]="true"
-    >
-      <ng-template ngbPaginationPages let-page let-pages="pages">
-        <li class="ngb-custom-pages-item" *ngIf="totalPages.length > 0">
-          <div class="form-group d-flex flex-nowrap px-2">
-            <label
-              id="paginationInputLabel"
-              for="paginationInput"
-              class="col-form-label mr-2 ml-1"
-              >Page</label
-            >
-            <input
-              #i
-              type="text"
-              inputmode="numeric"
-              pattern="[0-9]*"
-              class="form-control custom-pages-input"
-              id="paginationInput"
-              [value]="page"
-              (keyup.enter)="selectPage(i.value)"
-              (blur)="selectPage(i.value)"
-              (input)="formatInput($any($event).target)"
-              aria-labelledby="paginationInputLabel paginationDescription"
-              style="width: 2.5rem"
-            />
-            <span
-              id="paginationDescription"
-              class="col-form-label text-nowrap px-2"
-            >
-              of {{ totalPages }}</span
-            >
-          </div>
-        </li>
-      </ng-template>
-    </ngb-pagination>
+
+    <ngb-pagination (pageChange)="callPage($event)" [pageSize]="pageSize" [collectionSize]="totallengthForData" [(page)]="page" [maxSize]="5"
+    [boundaryLinks]="true"></ngb-pagination>
+    <select class="custom-select" style="width: auto" [(ngModel)]="pageSize" (ngModelChange)="callPage($event)">
+      <option [ngValue]="2">2 items per page</option>
+      <option [ngValue]="4">4 items per page</option>
+      <option [ngValue]="6">6 items per page</option>
+    </select>
   </div>
 </div>
