--- a/src/shared/navbar/navbar.component.html
+++ b/src/shared/navbar/navbar.component.html
@@ -25,7 +25,7 @@
             <button class=" btn btn-golden"  (click)="isMenuCollapsed = true ; logout()"  [hidden]="!isLogged()">logout</button>
           </li>
           <li class="nav-item ">
-            <p class="nav-link "   [hidden]="!isLogged()">hello</p>
+            <p class="nav-link "   [hidden]="!isLogged()">hello {{geartingName}}</p>
           </li>
         </ul>
       </div>
