--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,13 @@
 <div class="container">
   <div class="d-flex justify-content-center mb-2">
-    <h4>
+    <h4 class="mr-5">
       our students
     </h4>
+    <select class="custom-select" style="width: auto" [(ngModel)]="pageSize" (ngModelChange)="callPage($event)">
+      <option [ngValue]="2">2 items per page</option>
+      <option [ngValue]="4">4 items per page</option>
+      <option [ngValue]="6">6 items per page</option>
+    </select>
   </div>
   <table class="table table-striped table-bordered">
     <thead>
@@ -30,10 +35,7 @@
 
     <ngb-pagination (pageChange)="callPage($event)" [pageSize]="pageSize" [collectionSize]="totallengthForData" [(page)]="page" [maxSize]="5"
     [boundaryLinks]="true"></ngb-pagination>
-    <select class="custom-select" style="width: auto" [(ngModel)]="pageSize" (ngModelChange)="callPage($event)">
-      <option [ngValue]="2">2 items per page</option>
-      <option [ngValue]="4">4 items per page</option>
-      <option [ngValue]="6">6 items per page</option>
-    </select>
+
   </div>
+
 </div>
